crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/no_useless_lone_block_statements_is_not_triggered.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
{
	const x = 1;
}
---

<div>{x}</div>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
