crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/return_in_template_expression_should_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.astro
```

## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
const x = 5;
---
<div>{ return x }</div>
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.astro:2:7 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable x is unused.
  
    1 │ ---
  > 2 │ const x = 5;
      │       ^
    3 │ ---
    4 │ <div>{ return x }</div>
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend x with an underscore.
  
    1   │ - const·x·=·5;
      1 │ + const·_x·=·5;
    2 2 │   
  

```

```block
file.astro:4:8 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a valid expression in template syntax
  
    2 │ const x = 5;
    3 │ ---
  > 4 │ <div>{ return x }</div>
      │        ^^^^^^
  
  i Template expressions can only contain JavaScript expressions, not statements like 'let', 'if', or 'function'.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
