crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/sorts_imports_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --formatter-enabled=false --linter-enabled=false --write file.astro
```

## `file.astro`

```astro
---
import { Code } from "astro:components";
import { getLocale } from "astro:i18n";
import "style.css";
import { A, B } from "./util.js";
---
<div></div>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
