crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/use_import_type_not_triggered_for_components_in_template.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
import type { ComponentProps } from "astro/types";

import Badge from "@/components/mdx-components/Badge.astro";

interface Props {
	badge?: ComponentProps<typeof Badge>;
}

const { badge } = Astro.props;
---

{badge && <Badge text={badge.text} variant={badge.variant} />}

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
