crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/use_import_type_not_triggered_for_enum_in_template.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.astro`

```astro
---
import { Component, FooEnum } from './types';
---
<main>
  <Component />
  {FooEnum.Foo}
</main>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
