crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/use_jsx_key_in_iterable_is_ignored_for_astro_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": {
    "domains": {
      "react": "recommended"
    }
  },
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
const items = ["one", "two", "three"];
---
<ul>
    {items.map((item) => <li>{item}</li>)}
</ul>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
